2002-07-29  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/regc_locale.c (cclass): [[:xdigit:]] is only a defined
	concept on western characters, so should not allow any unicode
	digit, and hence number of ranges in [[:xdigit:]] is fixed.
	* tests/reg.test: Added test to detect the bug.
	* generic/regc_cvec.c (newcvec): Corrected initial size value in
	character vector structure.  [Bug 578363]  Many thanks to
	pvgoran@users.sf.net for tracking this down.

2002-07-28  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tcl.h: 
	* generic/tclBasic.c: added the new flag TCL_EVAL_NO_TRACEBACK to
	the interface of the Tcl_Eval* functions. Modified the error
	message for too many nested evaluations.
	* generic/tclInterp.h: changed the Alias struct to be of variable
	length and store the prefix arguments directly (instead of a
	pointer to a Tcl_Obj list). Made AliasObjCmd call Tcl_EvalObjv
	instead of TclObjInvoke - thus making aliases trigger execution
	traces [Bug 582522].
	* tests/interp.test:
	* tests/stack.test: adapted to the new error message.
	* tests/trace.test: added tests for aliases firing the exec
	traces. 

2002-07-27  Mo DeJong  <mdejong@users.sourceforge.net>

	* unix/Makefile.in: Revert fix for Tcl bug 529801
	since it was incorrect and broke the build on
	other systems. Fix Tcl bug 587299.
	Add MAJOR_VERSION, MINOR_VERSION, PATCH_LEVEL,
	SHLIB_LD_FLAGS, SHLIB_LD_LIBS, CC_SEARCH_FLAGS,
	LD_SEARCH_FLAGS, and LIB_FILE variables to support
	more generic library build/install rules.
	* unix/configure: Regen.
	* unix/configure.in: Move AC_PROG_RANLIB into
	tcl.m4. Move shared build test and setting
	of MAKE_LIB and MAKE_STUB_LIB into tcl.m4.
	Move subst of a number of variables into
	tcl.m4 where they are defined.
	* unix/tcl.m4 (SC_ENABLE_SYMBOLS, SC_CONFIG_CFLAGS):
	Subst vars where they are defined. Add MAKE_LIB,
	MAKE_STUB_LIB, INSTALL_LIB, and INSTALL_STUB_LIB
	rules to deal with the ugly details of running